tests/baselines/reference/parserMissingToken2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken2.ts (2 errors) ====
    / b;
    ~
!!! error TS1109: Expression expected.
      ~
!!! error TS2304: Cannot find name 'b'.